# statyes

./: README.md  start.sh
.kube/: api-deployment.yaml  api-service.yaml  client-deployment.yaml  client-service.yaml  client-ws-service.yaml  db-service.yaml  ingress.yaml  volume.yaml
api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
api/app/: database.py  main.py  models.py  postgres_functions.py  postgres_triggers.py  schema.py
api/app/migrations/: env.py
api/app/routers/: events.py
client/: Dockerfile  package-lock.json  package.json  svelte.config.js
kube/: client-deployment.yaml  db-deployment.yaml  volume-claim.yaml
